--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
+    "mongoose-findorcreate": "^4.0.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   },
